k8s/base/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-bet-balancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: smart-bet-backend
