k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-bet-backend
  labels:
    app: smart-bet-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: smart-bet-backend
