k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-bet-ingress
  namespace: smartbet-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - smartbet.api.br
      secretName: smart-bet-tls
  rules:
    - host: smartbet.api.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-bet-backend
                port:
                  number: 80
